Thu Feb  5 13:38:55 1998  Tom Tromey  <tromey@cygnus.com>

	* automake.in (scan_one_configure_file): Put CXCPP before CXX in
	regexp.  From Garth Corral.  Test cxxxcpp.test.

Sun Jan 25 11:16:53 1998  Tom Tromey  <tromey@cygnus.com>

	* automake.in (generate_makefile): Run handle_minor_options before
	handle_dist, to make sure README-alpha ends up in distribution.
	From Jim Meyering.

Tue Jan 13 09:19:33 1998  Tom Tromey  <tromey@cygnus.com>

	* aclocal.in (add_file): Hack for Perl 4.  From Seth Alves.

Thu Dec 11 12:29:46 1997  Ian Lance Taylor  <ian@cygnus.com>

	* scripts.am: Don't add @EXEEXT@ to installed scripts.  Scripts
	are not executables.

Tue Dec  2 20:07:18 1997  Tom Tromey  <tromey@cygnus.com>

	* automake.in (initialize_global_constants): Bug fix in
	uninstall_man_format.  Report from Eric Backus.

Mon Dec  1 13:52:39 1997  Tom Tromey  <tromey@cygnus.com>

	* automake.in (handle_source_transform): Correctly generate
	_OBJECTS when _SOURCES is defined conditionally.  Reported by Rob
	Savoye.  Test cond3.test.

	Fixes for test objc.test:
	* automake.in (initialize_per_input): New global seen_any_source.
	(handle_yacc_lex_cxx): Use seen_any_source to decide when to
	define LINK, et al.
	(handle_single_transform_list): Set seen_any_source.
	(handle_lib_objects_cond): Likewise.

Wed Nov 26 13:41:57 1997  Tom Tromey  <tromey@cygnus.com>

	* Released 1.2d.

	* m4/ccstdc.m4: Don't force AM_PROG_CC_STDC before AC_PROG_CPP.
	Temporary hack.

	* m4/mktime.m4 (AM_FUNC_MTIME): New version from Paul Eggert.

	* header-vars.am (NORMAL_INSTALL, PRE_INSTALL, POST_INSTALL,
	NORMAL_UNINSTALL, PRE_UNINSTALL, POST_UNINSTALL): Define as `:',
	not `true'.

	* automake.in (output_yacc_build_rule): Don't overwrite .h file in
	non-ylwrap case.

	* tags.am (ID): Scan lisp files.
	(TAGS): Make tags for lisp files.

Tue Nov 25 14:20:42 1997  Tom Tromey  <tromey@cygnus.com>

	* ltlib.am: Use INSTALL_DATA, not INSTALL_PROGRAM.  From Gord
	Matzigkeit.
