@@ -385,8 +385,8 @@ sub write_aclocal
 
     print STDERR "Writing aclocal.m4\n" if $verbosity;
 
-    open (ACLOCAL, "> aclocal.m4")
-	|| die "aclocal: couldn't open \`aclocal.m4' for writing: $!\n";
+    open (ACLOCAL, "> " . $output_file)
+	|| die "aclocal: couldn't open \`$output_file' for writing: $!\n";
     print ACLOCAL "dnl aclocal.m4 generated automatically by aclocal $VERSION\n";
     print ACLOCAL "\
 dnl Copyright (C) 1994, 1995, 1996, 1997 Free Software Foundation, Inc.
