@@ -1,3 +1,7 @@
+Wed Feb 11 17:28:30 1998  Tom Tromey  <tromey@cygnus.com>
+
+	* aclocal.test: New file.
+
 Thu Feb  5 13:22:17 1998  Tom Tromey  <tromey@cygnus.com>
 
 	* cxxcpp.test: New file.
