@@ -1,3 +1,8 @@
+Wed Feb 11 17:30:01 1998  Tom Tromey  <tromey@cygnus.com>
+
+	* aclocal.in (write_aclocal): Write to $output_file, not
+	aclocal.m4.  From Alexandre Oliva.
+
 Thu Feb  5 13:38:55 1998  Tom Tromey  <tromey@cygnus.com>
 
 	* automake.in (scan_one_configure_file): Put CXCPP before CXX in
